// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders a custom empty state message 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c1 {
  padding: 16px;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        No results
      </div>
    </div>
  </span>,
]
`;

exports[`snapshots renders a loading state 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c1 {
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c2 {
  -webkit-animation: rotate-keyframes 1s linear infinite;
  animation: rotate-keyframes 1s linear infinite;
}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div
      className="c1"
      display="flex"
    >
      <svg
        className="c2"
        fill="none"
        height="32px"
        viewBox="0 0 16 16"
        width="32px"
      >
        <circle
          cx="8"
          cy="8"
          r="7"
          stroke="currentColor"
          strokeOpacity="0.25"
          strokeWidth="2"
          vectorEffect="non-scaling-stroke"
        />
        <path
          d="M15 8a7.002 7.002 0 00-7-7"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          vectorEffect="non-scaling-stroke"
        />
      </svg>
    </div>
  </span>,
]
`;

exports[`snapshots renders a menu that contains an item to add to the menu 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c5 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
}

.c5 rect {
  fill: #ffffff;
  stroke: #d0d7de;
  shape-rendering: auto;
}

.c5 path {
  fill: #ffffff;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04);
  opacity: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
}

.c8 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: #656d76;
}

.c8 svg {
  font-size: 12px;
}

[data-variant="danger"]:hover .c4,[data-variant="danger"]:active .c8 {
  color: #1F2328;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c1 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: #1F2328;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c3[aria-disabled] {
  cursor: not-allowed;
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: rgba(208,215,222,0.48);
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]),.c3:focus:not([aria-disabled]),
.c3[data-focus-visible-added]:not([aria-disabled]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.32);
    color: #1F2328;
  }

  .c3:focus-visible,
  .c3 > a:focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px #0969da;
  }

  .c3:active:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.48);
    color: #1F2328;
  }
}

@media (forced-colors:active) {
  .c3:focus {
    outline: solid 1px transparent !important;
  }
}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="c1"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0 "
          className="c2 c3"
          data-id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="0"
            >
              zero
            </span>
          </div>
        </li>
        <li
          aria-labelledby="1 "
          className="c2 c3"
          data-id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="1"
            >
              one
            </span>
          </div>
        </li>
        <li
          aria-labelledby="2 "
          className="c2 c3"
          data-id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="2"
            >
              two
            </span>
          </div>
        </li>
        <li
          aria-labelledby="3 "
          className="c2 c3"
          data-id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="3"
            >
              three
            </span>
          </div>
        </li>
        <li
          aria-labelledby="4 "
          className="c2 c3"
          data-id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="4"
            >
              four
            </span>
          </div>
        </li>
        <li
          aria-labelledby="5 "
          className="c2 c3"
          data-id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="5"
            >
              five
            </span>
          </div>
        </li>
        <li
          aria-labelledby="6 "
          className="c2 c3"
          data-id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="6"
            >
              six
            </span>
          </div>
        </li>
        <li
          aria-labelledby="7 "
          className="c2 c3"
          data-id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="7"
            >
              seven
            </span>
          </div>
        </li>
        <li
          aria-labelledby="20 "
          className="c2 c3"
          data-id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="20"
            >
              twenty
            </span>
          </div>
        </li>
        <li
          aria-labelledby="21 "
          className="c2 c3"
          data-id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="21"
            >
              twentyone
            </span>
          </div>
        </li>
        <li
          aria-labelledby="add-new-item "
          className="c2 c3"
          data-id="add-new-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4 c5"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <span
            className="c4 c8"
          >
            <svg
              aria-hidden="true"
              className="octicon octicon-plus"
              fill="currentColor"
              focusable="false"
              height={16}
              role="img"
              style={
                {
                  "display": "inline-block",
                  "overflow": "visible",
                  "userSelect": "none",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"
              />
            </svg>
          </span>
          <div
            className="c4 c6"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4 c7"
              id="add-new-item"
            >
              Add new item
            </span>
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders a multiselect input 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c4 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
}

.c4 rect {
  fill: #ffffff;
  stroke: #d0d7de;
  shape-rendering: auto;
}

.c4 path {
  fill: #ffffff;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04);
  opacity: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c1 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: #1F2328;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c3[aria-disabled] {
  cursor: not-allowed;
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: rgba(208,215,222,0.48);
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]),.c3:focus:not([aria-disabled]),
.c3[data-focus-visible-added]:not([aria-disabled]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.32);
    color: #1F2328;
  }

  .c3:focus-visible,
  .c3 > a:focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px #0969da;
  }

  .c3:active:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.48);
    color: #1F2328;
  }
}

@media (forced-colors:active) {
  .c3:focus {
    outline: solid 1px transparent !important;
  }
}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="c1"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0 "
          className="c2 c3"
          data-id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="0"
            >
              zero
            </span>
          </div>
        </li>
        <li
          aria-labelledby="1 "
          className="c2 c3"
          data-id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="1"
            >
              one
            </span>
          </div>
        </li>
        <li
          aria-labelledby="2 "
          className="c2 c3"
          data-id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="2"
            >
              two
            </span>
          </div>
        </li>
        <li
          aria-labelledby="3 "
          className="c2 c3"
          data-id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="3"
            >
              three
            </span>
          </div>
        </li>
        <li
          aria-labelledby="4 "
          className="c2 c3"
          data-id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="4"
            >
              four
            </span>
          </div>
        </li>
        <li
          aria-labelledby="5 "
          className="c2 c3"
          data-id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="5"
            >
              five
            </span>
          </div>
        </li>
        <li
          aria-labelledby="6 "
          className="c2 c3"
          data-id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="6"
            >
              six
            </span>
          </div>
        </li>
        <li
          aria-labelledby="7 "
          className="c2 c3"
          data-id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="7"
            >
              seven
            </span>
          </div>
        </li>
        <li
          aria-labelledby="20 "
          className="c2 c3"
          data-id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="20"
            >
              twenty
            </span>
          </div>
        </li>
        <li
          aria-labelledby="21 "
          className="c2 c3"
          data-id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="21"
            >
              twentyone
            </span>
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders a multiselect input with selected menu items 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c4 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
}

.c4 rect {
  fill: #0969da;
  stroke: #0969da;
  shape-rendering: auto;
}

.c4 path {
  fill: #ffffff;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04);
  opacity: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
}

.c7 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
}

.c7 rect {
  fill: #ffffff;
  stroke: #d0d7de;
  shape-rendering: auto;
}

.c7 path {
  fill: #ffffff;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04);
  opacity: 0;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c1 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: #1F2328;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c3[aria-disabled] {
  cursor: not-allowed;
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: rgba(208,215,222,0.48);
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]),.c3:focus:not([aria-disabled]),
.c3[data-focus-visible-added]:not([aria-disabled]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.32);
    color: #1F2328;
  }

  .c3:focus-visible,
  .c3 > a:focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px #0969da;
  }

  .c3:active:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.48);
    color: #1F2328;
  }
}

@media (forced-colors:active) {
  .c3:focus {
    outline: solid 1px transparent !important;
  }
}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="c1"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0 "
          className="c2 c3"
          data-id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="0"
            >
              zero
            </span>
          </div>
        </li>
        <li
          aria-labelledby="1 "
          className="c2 c3"
          data-id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="1"
            >
              one
            </span>
          </div>
        </li>
        <li
          aria-labelledby="2 "
          className="c2 c3"
          data-id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="2"
            >
              two
            </span>
          </div>
        </li>
        <li
          aria-labelledby="3 "
          className="c2 c3"
          data-id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="3"
            >
              three
            </span>
          </div>
        </li>
        <li
          aria-labelledby="4 "
          className="c2 c3"
          data-id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="4"
            >
              four
            </span>
          </div>
        </li>
        <li
          aria-labelledby="5 "
          className="c2 c3"
          data-id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="5"
            >
              five
            </span>
          </div>
        </li>
        <li
          aria-labelledby="6 "
          className="c2 c3"
          data-id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="6"
            >
              six
            </span>
          </div>
        </li>
        <li
          aria-labelledby="7 "
          className="c2 c3"
          data-id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="7"
            >
              seven
            </span>
          </div>
        </li>
        <li
          aria-labelledby="20 "
          className="c2 c3"
          data-id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="20"
            >
              twenty
            </span>
          </div>
        </li>
        <li
          aria-labelledby="21 "
          className="c2 c3"
          data-id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c7"
          >
            <svg
              aria-hidden="true"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="12"
                rx="4"
                width="12"
                x="2"
                y="2"
              />
              <path
                d="M4.03231 8.69862C3.84775 8.20646 4.49385 7.77554 4.95539 7.77554C5.41693 7.77554 6.80154 9.85246 6.80154 9.85246C6.80154 9.85246 10.2631 4.314 10.4938 4.08323C10.7246 3.85246 11.8785 4.08323 11.4169 5.00631C11.0081 5.82388 7.26308 11.4678 7.26308 11.4678C7.26308 11.4678 6.80154 12.1602 6.34 11.4678C5.87846 10.7755 4.21687 9.19077 4.03231 8.69862Z"
                fillRule="evenodd"
                strokeWidth="0"
              />
            </svg>
          </span>
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="21"
            >
              twentyone
            </span>
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders a single select input 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c4 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c1 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: #1F2328;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c3[aria-disabled] {
  cursor: not-allowed;
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: rgba(208,215,222,0.48);
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]),.c3:focus:not([aria-disabled]),
.c3[data-focus-visible-added]:not([aria-disabled]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.32);
    color: #1F2328;
  }

  .c3:focus-visible,
  .c3 > a:focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px #0969da;
  }

  .c3:active:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.48);
    color: #1F2328;
  }
}

@media (forced-colors:active) {
  .c3:focus {
    outline: solid 1px transparent !important;
  }
}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="c1"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0 "
          className="c2 c3"
          data-id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="0"
            >
              zero
            </span>
          </div>
        </li>
        <li
          aria-labelledby="1 "
          className="c2 c3"
          data-id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="1"
            >
              one
            </span>
          </div>
        </li>
        <li
          aria-labelledby="2 "
          className="c2 c3"
          data-id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="2"
            >
              two
            </span>
          </div>
        </li>
        <li
          aria-labelledby="3 "
          className="c2 c3"
          data-id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="3"
            >
              three
            </span>
          </div>
        </li>
        <li
          aria-labelledby="4 "
          className="c2 c3"
          data-id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="4"
            >
              four
            </span>
          </div>
        </li>
        <li
          aria-labelledby="5 "
          className="c2 c3"
          data-id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="5"
            >
              five
            </span>
          </div>
        </li>
        <li
          aria-labelledby="6 "
          className="c2 c3"
          data-id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="6"
            >
              six
            </span>
          </div>
        </li>
        <li
          aria-labelledby="7 "
          className="c2 c3"
          data-id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="7"
            >
              seven
            </span>
          </div>
        </li>
        <li
          aria-labelledby="20 "
          className="c2 c3"
          data-id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="20"
            >
              twenty
            </span>
          </div>
        </li>
        <li
          aria-labelledby="21 "
          className="c2 c3"
          data-id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="21"
            >
              twentyone
            </span>
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders with a custom text input component 1`] = `
[
  @media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

<input
    id="customInput"
    type="text"
  />,
  .c4 {
  height: 20px;
  min-width: 16px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c1 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: #1F2328;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c3[aria-disabled] {
  cursor: not-allowed;
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: rgba(208,215,222,0.48);
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]),.c3:focus:not([aria-disabled]),
.c3[data-focus-visible-added]:not([aria-disabled]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.32);
    color: #1F2328;
  }

  .c3:focus-visible,
  .c3 > a:focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px #0969da;
  }

  .c3:active:not([aria-disabled]) {
    background-color: rgba(208,215,222,0.48);
    color: #1F2328;
  }
}

@media (forced-colors:active) {
  .c3:focus {
    outline: solid 1px transparent !important;
  }
}

<span
    className="c0"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="c1"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0 "
          className="c2 c3"
          data-id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="0"
            >
              zero
            </span>
          </div>
        </li>
        <li
          aria-labelledby="1 "
          className="c2 c3"
          data-id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="1"
            >
              one
            </span>
          </div>
        </li>
        <li
          aria-labelledby="2 "
          className="c2 c3"
          data-id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="2"
            >
              two
            </span>
          </div>
        </li>
        <li
          aria-labelledby="3 "
          className="c2 c3"
          data-id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="3"
            >
              three
            </span>
          </div>
        </li>
        <li
          aria-labelledby="4 "
          className="c2 c3"
          data-id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="4"
            >
              four
            </span>
          </div>
        </li>
        <li
          aria-labelledby="5 "
          className="c2 c3"
          data-id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="5"
            >
              five
            </span>
          </div>
        </li>
        <li
          aria-labelledby="6 "
          className="c2 c3"
          data-id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="6"
            >
              six
            </span>
          </div>
        </li>
        <li
          aria-labelledby="7 "
          className="c2 c3"
          data-id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="7"
            >
              seven
            </span>
          </div>
        </li>
        <li
          aria-labelledby="20 "
          className="c2 c3"
          data-id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="20"
            >
              twenty
            </span>
          </div>
        </li>
        <li
          aria-labelledby="21 "
          className="c2 c3"
          data-id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c4"
          />
          <div
            className="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c6"
              id="21"
            >
              twentyone
            </span>
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders with an input value 1`] = `
[
  .c0 {
  font-size: 14px;
  line-height: 20px;
  color: #1F2328;
  vertical-align: middle;
  background-color: #ffffff;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 32px;
}

.c0 input,
.c0 textarea {
  cursor: text;
}

.c0 select {
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #6e7781;
}

.c0::-moz-placeholder {
  color: #6e7781;
}

.c0:-ms-input-placeholder {
  color: #6e7781;
}

.c0::placeholder {
  color: #6e7781;
}

.c0:focus-within {
  border-color: #0969da;
  outline: none;
  box-shadow: inset 0 0 0 1px #0969da;
}

.c0 > textarea {
  padding: 12px;
}

.c1 {
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-left: 0;
  padding-right: 0;
}

.c1 > :not(:last-child) {
  margin-right: 8px;
}

.c1 .TextInput-icon,
.c1 .TextInput-action {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #656d76;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > input,
.c1 > select {
  padding-left: 12px;
  padding-right: 12px;
}

.c2 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c2:focus {
  outline: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
    aria-busy={false}
    className="c0 c1 TextInput-wrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="c2"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c1 {
  padding: 16px;
}

.c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (min-width:768px) {

}

<span
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        No selectable options
      </div>
    </div>
  </span>,
]
`;
